objects/revcult__Alert_Subscriber__c.object
<CustomObject>
    <fields>
        <fullName>revcult__Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>revcult__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Notify_In_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify In-App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Notify_via_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RevCult_Alert_Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OwnBackup Alert Subscriber</label>
    <listViews>
        <fullName>revcult__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASub-{00000000}</displayFormat>
        <label>OwnBackup Alert Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OwnBackup Alert Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>